; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xlog.c_GetXLogReceiptTime.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xlog.c_GetXLogReceiptTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InRecovery = common dso_local global i32 0, align 4
@XLogReceiptTime = common dso_local global i32 0, align 4
@XLogReceiptSource = common dso_local global i64 0, align 8
@XLOG_FROM_STREAM = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GetXLogReceiptTime(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* @InRecovery, align 4
  %6 = call i32 @Assert(i32 %5)
  %7 = load i32, i32* @XLogReceiptTime, align 4
  %8 = load i32*, i32** %3, align 8
  store i32 %7, i32* %8, align 4
  %9 = load i64, i64* @XLogReceiptSource, align 8
  %10 = load i64, i64* @XLOG_FROM_STREAM, align 8
  %11 = icmp eq i64 %9, %10
  %12 = zext i1 %11 to i32
  %13 = load i32*, i32** %4, align 8
  store i32 %12, i32* %13, align 4
  ret void
}

declare dso_local i32 @Assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
